[bdist_wheel]
universal = 1

[metadata]
name= mccabe
license_file = LICENSE
long_description = file: README.rst
description = McCabe checker, plugin for flake8
keywords = flake8, mccabe
author = Tarek Ziade
author_email = tarek@ziade.org
maintainer = Ian Cordasco
maintainer_email = graffatcolmingov@gmail.com
url = https://github.com/pycqa/mccabe
license = Expat license
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Quality Assurance

[options]
py_modules = mccabe
zip_safe = false
python_requires = >=3.4
tests_require =
    pytest

[options.entry_points]
flake8.extension =
    C90 = mccabe:McCabeChecker
